# giros-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  dry_run_launcher.py  dry_run_launcher_forced.py  main.py  migrate_history.py  migrate_history_safe.py  pyproject.toml  test_db.py  test_rotation.py
.github/: context.md  copilot-instructions.md
content_example/: 5-senales-sitio-web-perdiendo-clientes.mdx  como-aparecer-en-google-maps-negocios-locales-chile.mdx  tienda-online-vs-instagram-cual-necesita-tu-negocio.mdx
data/: publications.db
docs/: PLAN_WHATSAPP.md
knowledge_base/: README.md
scripts/: migrate_sqlite_to_postgres.py  setup_postgres.sql
src/giros_bot/: __init__.py  config.py  main.py
src/giros_bot/graph/: __init__.py  graph.py  state.py  whatsapp_graph.py
src/giros_bot/integrations/: __init__.py  whatsapp_api.py
src/giros_bot/prompts/: __init__.py  scout.py  social.py  strategist.py  system.py  validator.py  visual.py  whatsapp.py  writer.py
src/giros_bot/publication/: __init__.py
src/giros_bot/routers/: whatsapp.py
src/giros_bot/schemas/: __init__.py  frontend.py  state.py  whatsapp.py  whatsapp_state.py
src/giros_bot/services/: history_db.py  lead_capture.py  messaging.py  scheduling.py
src/giros_bot/tools/: __init__.py  lead_tool.py  messaging_tool.py  scheduling_tool.py  tavily_tool.py
tests/: __init__.py  preview_watermark_band.py  test_meta_social.py  test_nodes.py  test_pipeline_dry_run.py  test_publisher.py  test_schemas.py  test_watermark.py  test_whatsapp_graph.py  test_whatsapp_webhook.py
(+74 files in other folders)
